--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrePrintingFormat.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/OrganisationCentrePrintingFormat.cshtml
@@ -1,117 +1,101 @@
-﻿@using Coditech.ViewModel;
+﻿@using Coditech.Admin.Utilities;
+@using Coditech.Resources;
+@using Coditech.ViewModel;
 @model OrganisationCentrePrintingFormatViewModel
 @{
     ViewBag.Title = "Organisation Centre Printing Format";
-    string actionName = ViewContext.RouteData.Values["action"].ToString();
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
-<div class="content-header row">
-    <div class="content-header-left col-md-6 col-12 mb-2">
-        <h3 class="content-header-title">Organisation Printing format </h3>
-    </div>
-</div>
-<div class="content-body">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-header">
-                    @*<h4 class="card-title" id="horz-layout-colored-controls">Add Country</h4>
-                        <a class="heading-elements-toggle"><i class="la la-ellipsis-v font-medium-3"></i></a>*@
-                    <div class="heading-elements">
-                        <ul class="list-inline mb-0">
-                            <li>
-                                <a href="../@controllerName/@actionName"><i class="ft-rotate-cw"></i></a>
-                            </li>
-                            <li><a data-action="expand" title="Maximize"><i class="ft-maximize"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card-content collpase show">
+<!-- Page Content-->
+<div class="page-content">
+    <div class="container-fluid">
+        <!-- Page-Title -->
+        <div class="row">
+            <div class="col-sm-12">
+                <h3 class="content-header-title">Organisation Centre Printing Format</h3>
+                <div class="page-title-box">
+                    <div class="row">
+                        <div class="col">
+                        </div><!--end col-->
+                    </div><!--end row-->
+                </div><!--end page-title-box-->
+            </div><!--end col-->
+        </div><!--end row-->
+        <!-- end page title end breadcrumb -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
                     <div class="card-body">
-                        @*<div class="card-text">
-                                <p>This is 2-columns horizontal form with labels on left and form controls on right in one line. Add <code>.form-horizontal</code> class to the form tag to have horizontal form styling. User can also change the border color and background color of the form control. Add <code>border-*</code> class to change border color and <code>bg-*</code> class to change background color of the form control.</p>
-                            </div>*@
-
-                        @using (Html.BeginForm("Index", "OrganisationCentreMaster", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
-                            @Html.HiddenFor(m => m.OrganisationCentrePrintingFormatId);
-                            <div class="form-body">
-                                @*<h4 class="form-section"><i class="la la-eye"></i> About User</h4>*@
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group row">
-                                            @Html.LabelFor(x => x.CentreName, new { @class = "col-md-3 label-control required" })
-                                            <div class="col-md-9 mx-auto">
-                                                @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control border-primary", @placeholder = "Centre Name", @disabled = "disabled" })
-                                                @Html.ValidationMessageFor(x => x.CentreName, null, new { @class = "red" })
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group row">
-                                            @Html.LabelFor(x => x.CentreCode, new { @class = "col-md-3 label-control required" })
-                                            <div class="col-md-9 mx-auto">
-                                                @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control border-primary", @placeholder = "Centre Code", @disabled = "disabled" })
-                                                @Html.ValidationMessageFor(x => x.CentreCode, null, new { @class = "red" })
-                                            </div>
-                                        </div>
+                            @Html.HiddenFor(m => m.OrganisationCentrePrintingFormatId)
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.CentreName, new { @class = "form-label required" })
+
+                                        @Html.TextBoxFor(x => x.CentreName, new { @class = "form-control",@disabled = "disabled"})
+                                        @Html.ValidationMessageFor(x => x.CentreName)
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group row">
-                                            @Html.LabelFor(x => x.PrintingLine1, new { @class = "col-md-3 label-control required" })
-                                            <div class="col-md-9 mx-auto">
-                                                @Html.TextAreaFor(x => x.PrintingLine1, new { @class = "form-control border-primary", @placeholder = "Printing Line 1" })
-                                                @Html.ValidationMessageFor(x => x.PrintingLine1, null, new { @class = "red" })
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group row">
-                                            @Html.LabelFor(x => x.PrintingLine2, new { @class = "col-md-3 label-control" })
-                                            <div class="col-md-9 mx-auto">
-                                                @Html.TextAreaFor(x => x.PrintingLine2, new { @class = "form-control border-primary", @placeholder = "Printing Line 2" })
-                                                @Html.ValidationMessageFor(x => x.PrintingLine2, null, new { @class = "red" })
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group row">
-                                            @Html.LabelFor(x => x.PrintingLine3, new { @class = "col-md-3 label-control required" })
-                                            <div class="col-md-9 mx-auto">
-                                                @Html.TextAreaFor(x => x.PrintingLine3, new { @class = "form-control border-primary", @placeholder = "Printing Line 3" })
-                                                @Html.ValidationMessageFor(x => x.PrintingLine3, null, new { @class = "red" })
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group row">
-                                            @Html.LabelFor(x => x.PrintingLine4, new { @class = "col-md-3 label-control" })
-                                            <div class="col-md-9 mx-auto">
-                                                @Html.TextAreaFor(x => x.PrintingLine4, new { @class = "form-control border-primary", @placeholder = "Printing Line 4" })
-                                                @Html.ValidationMessageFor(x => x.PrintingLine4, null, new { @class = "red" })
-                                            </div>
-                                        </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+
+                                        @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control",@disabled = "disabled"})
+                                        @Html.ValidationMessageFor(x => x.CentreCode)
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group row">
-                                        @Html.LabelFor(x => x.Logo, new { @class = "col-md-3 label-control required" })
-                                        <div class="col-md-9 mx-auto">
-                                            <input type="file" / id="imgfile" name="imgfile">
-                                            <button type="submit" class="btn btn-success"><i class="la la-check-square-o"></i>@GeneralResources.SaveButton</button>
-                                        </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PrintingLine1, new { @class = "form-label required" })
+
+                                        @Html.TextAreaFor(x => x.PrintingLine1, new { @class = "form-control"})
+                                        @Html.ValidationMessageFor(x => x.PrintingLine1)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PrintingLine2, new { @class = "form-label required" })
+
+                                        @Html.TextAreaFor(x => x.PrintingLine2, new { @class = "form-control"})
+                                        @Html.ValidationMessageFor(x => x.PrintingLine2)
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-actions text-right">
-                                @* <button type="submit" class="btn btn-success"><i class="la la-check-square-o"></i>@GeneralResources.SaveButton</button>*@
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PrintingLine3, new { @class = "form-label required" })
+
+                                        @Html.TextAreaFor(x => x.PrintingLine3, new { @class = "form-control"})
+                                        @Html.ValidationMessageFor(x => x.PrintingLine3)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PrintingLine4, new { @class = "form-label required" })
+
+                                        @Html.TextAreaFor(x => x.PrintingLine4, new { @class = "form-control"})
+                                        @Html.ValidationMessageFor(x => x.PrintingLine4)
+                                    </div>
+                                </div>
                             </div>
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.Logo, new { @class = "col-md-3 label-control required" })
+                                        <input type="File" / id="LogoFilename" name="LogoFilename">
+                                        <button type="submit" class="btn btn-success"><i class="la la-check-square-o"></i>@GeneralResources.SaveButton</button>
+                                    </div>
+                                </div>
+                            </div>
+                            @* <div class="form-actions text-right">
+                        <button type="submit" class="btn btn-success"><i class="la la-check-square-o"></i>@GeneralResources.SaveButton</button>
+                        </div> *@
                         }
                     </div>
                 </div>
