--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
@@ -33,84 +33,84 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OrganisationName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OrganisationName, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.OrganisationName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.OrganisationName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OrganisationCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OrganisationCode, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.OrganisationCode, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.OrganisationCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EstablishmentCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.EstablishmentCode, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.EstablishmentCode, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.EstablishmentCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MissionStatement, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MissionStatement, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.MissionStatement, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.MissionStatement)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FounderMember, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.FounderMember, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.FounderMember, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.FounderMember)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FoundationDatetime, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.FoundationDatetime, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.FoundationDatetime, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.FoundationDatetime)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmailId, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.EmailId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Url, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Url, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.Url, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Url)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PFNumber, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PFNumber, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.PFNumber, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PFNumber)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.ESICNumber, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ESICNumber, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.ESICNumber, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.ESICNumber)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OfficeComment, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OfficeComment, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.OfficeComment, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.OfficeComment)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Address1, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Address1, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.Address1, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Address1)
                                     </div>
                                 </div>
@@ -124,28 +124,28 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Pincode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Pincode, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.Pincode, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Pincode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.MobileNumber)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OfficePhone1, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OfficePhone1, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.OfficePhone1, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.OfficePhone1)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OfficePhone2, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OfficePhone2, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.OfficePhone2, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.OfficePhone2)
                                     </div>
                                 </div>
@@ -158,129 +158,54 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@* @model OrganisationMasterViewModel
-@{
-    ViewBag.Title = Model.OrganisationMasterId > 0 ? "Update Organisation Master" ;
-    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    string actionName = ViewContext.RouteData.Values["action"].ToString();
+@section scripts {
+    <script>
+        $(function () {
+            $('#FoundationDatetime').daterangepicker({
+                singleDatePicker: true,
+                showDropdowns: true,
+                showWeekNumbers: false,
+                drops: "auto",
+                opens: "right",
+                autoApply: false,
+                "locale": {
+                    "format": "DD/MM/YYYY",
+                    "separator": " - ",
+                    "applyLabel": "Apply",
+                    "cancelLabel": "Cancel",
+                    "fromLabel": "From",
+                    "toLabel": "To",
+                    "customRangeLabel": "Custom",
+                    "weekLabel": "W",
+                    "daysOfWeek": [
+                        "Su",
+                        "Mo",
+                        "Tu",
+                        "We",
+                        "Th",
+                        "Fr",
+                        "Sa"
+                    ],
+                    "monthNames": [
+                        "January",
+                        "February",
+                        "March",
+                        "April",
+                        "May",
+                        "June",
+                        "July",
+                        "August",
+                        "September",
+                        "October",
+                        "November",
+                        "December"
+                    ],
+                    "firstDay": 1
+                },
+                minYear: 1901,
+                maxYear: parseInt(moment().format('YYYY'), 10)
+            }, 
+            function (start, end, label) {});
+        });
+    </script>
 }
-<!-- Page Content-->
-<div class="page-content">
-    <div class="container-fluid">
-        <!-- Page-Title -->
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="page-title-box">
-                    <div class="row">
-                        <div class="col">
-                            <h3 class="content-header-title">Organisation Master</h3>
-                        </div><!--end col-->
-                    </div><!--end row-->
-                </div><!--end page-title-box-->
-            </div><!--end col-->
-        </div><!--end row-->
-        <!-- end page title end breadcrumb -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
-                        {
-                            @Html.HiddenFor(m => m.OrganisationMasterId)
-                           @*  @Html.HiddenFor(m => m.IsOtherState) *@
-@* <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrganisationName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OrganisationName, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.OrganisationName)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrganisationCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OrganisationCode, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.OrganisationCode)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.EstablishmentCode, new { @class = "form-label required" })
-                                    @Html.TextBoxFor(x => x.EstablishmentCode, new { @class = "form-control" })
-                                    @Html.ValidationMessageFor(x => x.EstablishmentCode)
-                                </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.MissionStatement, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MissionStatement, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.MissionStatement)
-                                    </div>
-                                </div>
-
-
-
-
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.FounderMember, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.FounderMember, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.FounderMember)
-                                    </div>
-                                </div>
-
-
-
-
-
-
-
-                            </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
-                        }
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> *@
