--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -27,8 +27,9 @@
     <link href="~/css/layout/site.css" rel="stylesheet" />
     <link href="~/css/layout/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="~/css/layout/icons.min.css" rel="stylesheet" type="text/css"/>
-    <link href="~/css/layout/metisMenu.min.css" rel="stylesheet" type="text/css"/>
-    <link href="~/css/layout/daterangepicker.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/layout/metisMenu.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/layout/daterangepicker.css" rel="stylesheet" type="text/css" />
+    @* <link href="~/css/layout/bootstrap-datepicker.css" type="stylesheet" /> *@
     <link href="~/css/layout/app.min.css" rel="stylesheet" type="text/css">
     <link href="~/css/layout/datatables.bootstrap5.min.css" rel="stylesheet" type="text/css" />
     <link href="~/css/layout/buttons.bootstrap5.min.css" rel="stylesheet" />
@@ -120,6 +121,7 @@
     <script src="~/js/layout/feather.min.js"></script>
     <script src="~/js/layout/simplebar.min.js"></script>
     <script src="~/js/layout/moment.js"></script>
+    @* <script src="~/js/layout/bootstrap-datepicker.js"></script> *@
     <script src="~/js/layout/daterangepicker.js"></script>
     <script src="~/js/layout/app.js"></script>
     <script src="~/js/layout/bootstrap-select.min.js"></script>
