--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/CreateEdit.cshtml
@@ -38,7 +38,14 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FeatureName, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.FeatureName, new { @class = "form-control"})
+                                        @if (Model.GeneralSystemGlobleSettingMasterId > 0)
+                                        {
+                                            @Html.TextBoxFor(x => x.FeatureName, new { @class = "form-control", @readonly = "true" })
+                                        }
+                                        else
+                                        {
+                                            @Html.TextBoxFor(x => x.FeatureName, new { @class = "form-control" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.FeatureName)
                                     </div>
                                 </div>
