--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_CreateEditGeneralPerson.cshtml
@@ -77,6 +77,13 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="mb-3">
+                            @Html.LabelFor(x => x.AnniversaryDate, new { @class = "form-label" })
+                            @Html.TextBoxFor(x => x.AnniversaryDate, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.AnniversaryDate)
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="mb-3">
                             @Html.LabelFor(x => x.EmailId, new { @class = "form-label" })
                             @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.EmailId)
